header background color

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ header {
   text-align: center;
   font-family: Roboto, Georgia, sans-serif;
   font-size: 22px;
-  background-color: #ECFBFD;
+  background-color: #bcbcbc;
 }
 
 /* fonts */
