--- a/style.css
+++ b/style.css
@@ -83,5 +83,5 @@ footer {
   font-size: 10px;
   height: 30px;
   text-align: center;
-  background-color: #ECFBFD;
+  background-color: #bcbcbc;
 }
