adjust card size

--- a/style.css
+++ b/style.css
@@ -90,9 +90,25 @@ footer {
 .card {
   height: 50px;
   max-height: 60px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: var(--viewport-height);
+  overflow: hidden;
+  position: relative;
+  z-index: 2;
 }
 
 .card-deck {
   height: 50px;
   max-height: 60px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: var(--viewport-height);
+  overflow: hidden;
+  position: relative;
+  z-index: 2;
 }
