--- a/style.css
+++ b/style.css
@@ -864,7 +864,7 @@ html,
         transition: fill 0.125s ease;
       }
       #icons01 a svg {
-        fill: #325d80;
+        fill: #000000B3;
       }
       #icons01 a {
         border: solid 1px rgba(0, 0, 0, 0.169);
