--- a/style.css
+++ b/style.css
@@ -727,7 +727,7 @@ html,
       }
       #text03 {
         text-transform: uppercase;
-        color: #325d80;
+        color: #4b4b4b;
         font-family: "Inter", sans-serif;
         letter-spacing: 0.3rem;
         width: calc(100% + 0.3rem);
