--- a/style.css
+++ b/style.css
@@ -1111,3 +1111,16 @@ html,
           gap: 0.9375rem;
         }
       }
+      body {
+          animation: fadeInAnimation ease 1.25s;
+          animation-iteration-count: 1;
+          animation-fill-mode: forwards;
+      }
+      @keyframes fadeInAnimation {
+          0% {
+              opacity: 0;
+          }
+          100% {
+              opacity: 1;
+          }
+      }
