--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* formatting */
+
+@media screen and (max-width: 720px) {
+  #github {
+    display: none;
+  }
+}
 
 body, main, section, article {
   padding: 5px;
